--- a/site/package.json
+++ b/site/package.json
@@ -7,6 +7,7 @@
     "gatsby": "^2.0.0",
     "gatsby-plugin-manifest": "^2.0.2",
     "gatsby-plugin-offline": "^2.0.5",
+    "gatsby-plugin-page-transitions": "^1.0.7",
     "gatsby-plugin-react-helmet": "^3.0.0",
     "gatsby-plugin-sass": "^2.0.1",
     "gatsby-source-strapi": "0.0.3",
@@ -14,7 +15,8 @@
     "react": "^16.5.1",
     "react-dom": "^16.5.1",
     "react-helmet": "^5.2.0",
-    "react-loadable": "^5.5.0"
+    "react-loadable": "^5.5.0",
+    "react-transition-group": "^2.4.0"
   },
   "keywords": [
     "gatsby"
