--- a/api/api/project/models/Project.settings.json
+++ b/api/api/project/models/Project.settings.json
@@ -30,6 +30,10 @@
     "projects": {
       "collection": "project",
       "via": "author"
+    },
+    "copy": {
+      "default": "",
+      "type": "text"
     }
   }
 }
