styles home component

--- a/api/package.json
+++ b/api/package.json
@@ -21,7 +21,8 @@
   "dependencies": {
     "lodash": "4.x.x",
     "strapi": "3.0.0-alpha.14.1.1",
-    "strapi-hook-mongoose": "3.0.0-alpha.14.1.1"
+    "strapi-hook-mongoose": "3.0.0-alpha.14.1.1",
+    "strapi-upload-aws-s3": "^3.0.0-alpha.14.1.1"
   },
   "author": {
     "name": "jvargas",
