--- a/api/package.json
+++ b/api/package.json
@@ -22,7 +22,8 @@
     "lodash": "4.x.x",
     "strapi": "3.0.0-alpha.14.1.1",
     "strapi-hook-mongoose": "3.0.0-alpha.14.1.1",
-    "strapi-upload-aws-s3": "^3.0.0-alpha.14.1.1"
+    "strapi-upload-aws-s3": "^3.0.0-alpha.14.1.1",
+    "strapi-upload-cloudinary": "^3.0.0-alpha.12"
   },
   "author": {
     "name": "jvargas",
